--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "AngularUI Team",
   "name": "angular-ui-utils",
+  "version": "0.1.1",
   "description": "AngularUI Utilities - Companion Suite for AngularJS",
   "homepage": "http://angular-ui.github.com",
   "main": "./index.js",
